--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <title>Umm... what?</title>
 </head>
 <body>
-<img alt="" src="wait-its-all-ohio-always-has-been.png"
+<img alt="" src="https://zzx-the-neptune.github.io/wait-its-all-ohio-always-has-been.png"
  style="width: 960px; height: 540px;">
 </body>
 </html>
