--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
-<p align="center"><a href="https://zzx-the-neptune.github.io/home.html">
+<p align="center"><a href="home.html">
 <img border="0" src="Error%20Message.png" width="876" height="83"></a></p>
 </body>
 </html>
