--- a/home.html
+++ b/home.html
@@ -5,9 +5,33 @@
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title>Home</title>
 <bgsound src="music.wav" loop="-1">
+<script language="JavaScript">
+<!--
+function FP_swapImg() {//v1.0
+ var doc=document,args=arguments,elm,n; doc.$imgSwaps=new Array(); for(n=2; n<args.length;
+ n+=2) { elm=FP_getObjectByID(args[n]); if(elm) { doc.$imgSwaps[doc.$imgSwaps.length]=elm;
+ elm.$src=elm.src; elm.src=args[n+1]; } }
+}
+
+function FP_preloadImgs() {//v1.0
+ var d=document,a=arguments; if(!d.FP_imgs) d.FP_imgs=new Array();
+ for(var i=0; i<a.length; i++) { d.FP_imgs[i]=new Image; d.FP_imgs[i].src=a[i]; }
+}
+
+function FP_getObjectByID(id,o) {//v1.0
+ var c,el,els,f,m,n; if(!o)o=document; if(o.getElementById) el=o.getElementById(id);
+ else if(o.layers) c=o.layers; else if(o.all) el=o.all[id]; if(el) return el;
+ if(o.id==id || o.name==id) return o; if(o.childNodes) c=o.childNodes; if(c)
+ for(n=0; n<c.length; n++) { el=FP_getObjectByID(id,c[n]); if(el) return el; }
+ f=o.forms; if(f) for(n=0; n<f.length; n++) { els=f[n].elements;
+ for(m=0; m<els.length; m++){ el=FP_getObjectByID(id,els[n]); if(el) return el; } }
+ return null;
+}
+// -->
+</script>
 </head>
 
-<body link="#FFFFFF" vlink="#00FFFF" alink="#FF0000" text="#FFFFFF" bgcolor="#008080">
+<body link="#FFFFFF" vlink="#00FFFF" alink="#FF0000" text="#FFFFFF" bgcolor="#008080" onload="FP_preloadImgs(/*url*/'button5.gif', /*url*/'button6.gif')">
 
 <p align="center">
 <img border="0" src="beb541eeb1ee06ba00ef55d5baa60773.gif" width="480" height="267"></p>
@@ -17,6 +41,9 @@
 fuck but now its better!</p>
 <p align="center">
 <img border="0" src="Error%20Message%20(1).png" width="232" height="135"></p>
+<p align="center">
+<a href="grandad.htm">
+<img border="0" id="img1" src="button4.gif" height="20" width="100" alt="Fleentstones" fp-style="fp-btn: Braided Row 2; fp-font-color-normal: #FFFFFF; fp-font-color-hover: #FFFFFF; fp-font-color-press: #FFFFFF; fp-transparent: 1" fp-title="Fleentstones" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'button5.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'button4.gif')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'button6.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'button5.gif')"></a></p>
 <p align="center">
 <marquee>Zzx the neptune 2021(c)</marquee></p>
 
