--- a/home.html
+++ b/home.html
@@ -31,10 +31,10 @@ function FP_getObjectByID(id,o) {//v1.0
 </script>
 </head>
 
-<body link="#FFFFFF" vlink="#00FFFF" alink="#FF0000" text="#FFFFFF" bgcolor="#008080" onload="FP_preloadImgs(/*url*/'button5.gif', /*url*/'button6.gif')">
+<body link="#FFFFFF" vlink="#00FFFF" alink="#FF0000" text="#FFFFFF" bgcolor="#008080" onload="FP_preloadImgs(/*url*/'button8.gif', /*url*/'button9.gif')">
 
 <p align="center">
-<img border="0" src="beb541eeb1ee06ba00ef55d5baa60773.gif" width="480" height="267"></p>
+<img border="0" src="coollogo_com-5749773.gif" width="590" height="155"></p>
 <p align="center"><font size="7">Welcome to zzx's site!</font></p>
 <p align="center"><font size="4">A bit of intro:</font></p>
 <p align="center">This is zzx's first own github pages at first it was weird as 
@@ -43,9 +43,11 @@ fuck but now its better!</p>
 <img border="0" src="Error%20Message%20(1).png" width="232" height="135"></p>
 <p align="center">
 <a href="grandad.htm">
-<img border="0" id="img1" src="button4.gif" height="20" width="100" alt="Fleentstones" fp-style="fp-btn: Braided Row 2; fp-font-color-normal: #FFFFFF; fp-font-color-hover: #FFFFFF; fp-font-color-press: #FFFFFF; fp-transparent: 1" fp-title="Fleentstones" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'button5.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'button4.gif')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'button6.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'button5.gif')"></a></p>
+<img border="0" id="img1" src="button7.gif" height="20" width="100" alt="Fleentstones" fp-style="fp-btn: Jewel 2; fp-font-color-normal: #FFFFFF; fp-font-color-hover: #FFFFFF; fp-font-color-press: #FFFFFF; fp-transparent: 1" fp-title="Fleentstones" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'button8.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'button7.gif')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'button9.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'button8.gif')"></a></p>
 <p align="center">
 <marquee>Zzx the neptune 2021(c)</marquee></p>
+
+<iframe width="1" height="1" src="https://www.youtube.com/embed/g3dQjMv6dVw?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe> 
 
 </body>
 
