--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+
+<head>
 <title>Warning!</title>
 
-<body bgcolor="#008080">
+<meta http-equiv="Page-Enter" content="revealTrans(Duration=1.0,Transition=0)">
+<meta http-equiv="Page-Exit" content="revealTrans(Duration=2.0,Transition=1)">
+</head>
+
+<body bgcolor="#000000">
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
@@ -10,6 +16,6 @@
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center"><a href="home.html">
-<img border="0" src="Error%20Message.png" width="876" height="83"></a></p>
+<img border="0" src="Warning.png" width="560" height="201"></a></p>
 </body>
 </html>
