--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@ fuck but now its better!</p>
 <p align="center">
 <marquee>Zzx the neptune 2021(c)</marquee></p>
 
-<iframe width="1" height="1" src="https://www.youtube.com/embed/g3dQjMv6dVw?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe> 
+<iframe width="1" height="1" src="https://www.youtube.com/embed/g3dQjMv6dVw?controls=0" frameborder="0" allow="accelerometer; autoplay="0" clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 
 </body>
 
