--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@ function FP_getObjectByID(id,o) {//v1.0
 </script>
 </head>
 
-<body link="#FFFFFF" vlink="#00FFFF" alink="#FF0000" text="#FFFFFF" bgcolor="#008080" onload="FP_preloadImgs(/*url*/'button8.gif', /*url*/'button9.gif')">
+<body link="#FFFFFF" vlink="#00FFFF" alink="#FF0000" text="#FFFFFF" bgcolor="#008080" onload="FP_preloadImgs(/*url*/'button8.gif', /*url*/'button9.gif', /*url*/'buttonD.gif', /*url*/'buttonE.gif')">
 
 <p align="center">
 <img border="0" src="coollogo_com-5749773.gif" width="590" height="155"></p>
@@ -43,7 +43,7 @@ fuck but now its better!</p>
 <img border="0" src="Error%20Message%20(1).png" width="232" height="135"></p>
 <p align="center">
 <a href="grandad.htm">
-<img border="0" id="img1" src="button7.gif" height="20" width="100" alt="Fleentstones" fp-style="fp-btn: Jewel 2; fp-font-color-normal: #FFFFFF; fp-font-color-hover: #FFFFFF; fp-font-color-press: #FFFFFF; fp-transparent: 1" fp-title="Fleentstones" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'button8.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'button7.gif')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'button9.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'button8.gif')"></a></p>
+<img border="0" id="img1" src="button7.gif" height="20" width="100" alt="Fleentstones" fp-style="fp-btn: Jewel 2; fp-font-color-normal: #FFFFFF; fp-font-color-hover: #FFFFFF; fp-font-color-press: #FFFFFF; fp-transparent: 1" fp-title="Fleentstones" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'button8.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'button7.gif')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'button9.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'button8.gif')"></a><a href="http://users2.smartgb.com/g/g.php?a=s&i=g26-38039-9d"><img border="0" id="img2" src="buttonC.gif" height="20" width="100" alt="Guest book" fp-style="fp-btn: Jewel 1; fp-font-color-normal: #FFFFFF; fp-font-color-hover: #FFFFFF; fp-font-color-press: #FFFFFF; fp-transparent: 1" fp-title="Guest book" onmouseover="FP_swapImg(1,0,/*id*/'img2',/*url*/'buttonD.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img2',/*url*/'buttonC.gif')" onmousedown="FP_swapImg(1,0,/*id*/'img2',/*url*/'buttonE.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img2',/*url*/'buttonD.gif')"></a></p>
 <p align="center">
 <marquee>Zzx the neptune 2021(c)</marquee></p>
 
