--- a/grandad.htm
+++ b/grandad.htm
@@ -4,15 +4,41 @@
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title>Fleenstones</title>
 <bgsound src="grandad.wav" loop="-1">
+<script language="JavaScript">
+<!--
+function FP_swapImg() {//v1.0
+ var doc=document,args=arguments,elm,n; doc.$imgSwaps=new Array(); for(n=2; n<args.length;
+ n+=2) { elm=FP_getObjectByID(args[n]); if(elm) { doc.$imgSwaps[doc.$imgSwaps.length]=elm;
+ elm.$src=elm.src; elm.src=args[n+1]; } }
+}
+
+function FP_preloadImgs() {//v1.0
+ var d=document,a=arguments; if(!d.FP_imgs) d.FP_imgs=new Array();
+ for(var i=0; i<a.length; i++) { d.FP_imgs[i]=new Image; d.FP_imgs[i].src=a[i]; }
+}
+
+function FP_getObjectByID(id,o) {//v1.0
+ var c,el,els,f,m,n; if(!o)o=document; if(o.getElementById) el=o.getElementById(id);
+ else if(o.layers) c=o.layers; else if(o.all) el=o.all[id]; if(el) return el;
+ if(o.id==id || o.name==id) return o; if(o.childNodes) c=o.childNodes; if(c)
+ for(n=0; n<c.length; n++) { el=FP_getObjectByID(id,c[n]); if(el) return el; }
+ f=o.forms; if(f) for(n=0; n<f.length; n++) { els=f[n].elements;
+ for(m=0; m<els.length; m++){ el=FP_getObjectByID(id,els[n]); if(el) return el; } }
+ return null;
+}
+// -->
+</script>
 </head>
 
-<body bgcolor="#0066CC">
+<body bgcolor="#155FD9" onload="FP_preloadImgs(/*url*/'button10.gif', /*url*/'button11.gif')">
 
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center">
 <img border="0" src="7-GRAND-DAD.gif" width="470" height="441"></p>
+<p align="center">
+<img border="0" id="img1" src="button12.gif" height="20" width="100" alt="GO THE FUCK BACK" fp-style="fp-btn: Braided Column 1; fp-font: Times New Roman; fp-font-style: Bold; fp-font-size: 6; fp-font-color-normal: #FFFFFF; fp-font-color-hover: #800000; fp-font-color-press: #00FF00; fp-transparent: 1" fp-title="GO THE FUCK BACK" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'button10.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'button12.gif')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'button11.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'button10.gif')"></p>
 <p align="center">&nbsp;</p>
 
 </body>
