--- a/grandad.htm
+++ b/grandad.htm
@@ -38,7 +38,7 @@ function FP_getObjectByID(id,o) {//v1.0
 <p align="center">
 <img border="0" src="7-GRAND-DAD.gif" width="470" height="441"></p>
 <p align="center">
-<a href="https://zzx-the-neptune.github.io/grandad.htm">
+<a href="https://zzx-the-neptune.github.io/home.html">
 <img border="0" id="img1" src="button12.gif" height="20" width="100" alt="GO THE FUCK BACK" fp-style="fp-btn: Braided Column 1; fp-font: Times New Roman; fp-font-style: Bold; fp-font-size: 6; fp-font-color-normal: #FFFFFF; fp-font-color-hover: #800000; fp-font-color-press: #00FF00; fp-transparent: 1" fp-title="GO THE FUCK BACK" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'button10.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'button12.gif')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'button11.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'button10.gif')"></a></p>
 <p align="center">&nbsp;</p>
 
